# PlaygroundCore

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
config/: artifactory_upload_spec.json
include/: cicd_core.h  cicd_logger.h
src/: cicd_logger.cpp
